2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: return with a proper PDB status type
	depending on the result of gtk_print_operation_run(). When run
	non-interactively, pass the error message with the return values.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/coolmetal-logo.scm: applied patch
	from LightningIsMyName. Changes the script to not break if called
	on a floating selection (bug #327681).

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	* app/core/gimpgradient.c (gimp_gradient_segment_range_delete):
	Don't dereference final_start_seg and final_end_seg if NULL.

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	Fix indentation in previous patch.

	* tools/pdbgen/pdb/gradient.pdb
	* app/pdb/gradient-cmds.c

2008-08-23  Lars-Peter Clausen  <lars@metafoo.de>

	* tools/pdbgen/pdb/gradient.pdb
	(gimp_gradient_segment_range_blend_(colors|opacity)): Don't crash 
	if the index of the last segment is out of range.

	* app/pdb/gradient-cmds.c: regenerated.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/twain/Makefile.am: dropped use of AM_LDFLAGS completely
	and use target-specific LDFLAGS instead.

2008-08-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_init): only create and
	use a timer if GIMP_UNSTABLE is defined.

2008-08-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpnavigationview.c
	* libgimpwidgets/gimpscrolledpreview.c: hardcode the colors to
	black and white. Using theme colors doesn't make sense here.

2008-08-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.[ch]: draw the navigation
	popup using Cairo, just as we do it in the core now.

2008-08-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpnavigationview.c: indicate the viewport by
	shading the outside region using Cairo.

2008-08-22  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpnavigationeditor.c: Align static function
	prototypes.
